@@ -1,5 +1,10 @@
 2008-12-19  Daniel Elstner  <danielk@openismus.com>
 
+	* tests/test-alpha-creation.cc: Adapt to cluttermm API change.
+	Also get rid of some cruft.
+
+2008-12-19  Daniel Elstner  <danielk@openismus.com>
+
 	* tools/extra_defs_gen/generate_defs_clutter_gtk.cc: Fix to obey the
 	single central header policy of clutter 0.9.
 	* clutter-gtk/src/embed.ccg: ditto.
